--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 	float: left;
 	width: 100%;
 	height: 60%;
-	background: #09F;
+	background: #2E8B57;
 	text-align: center;
 	font-size: 3em;
 	font-weight: bold;
-	font-family: Tahoma;
+	font-family: Berlin Sans FB;
 }
 #teclado
 {
@@ -39,8 +39,8 @@
 	position: relative;
 	float: left;
 	height: 90%;
-	outline: #000 solid 1px;
-	background: #C9C9C9;
+	outline: #FFF solid 1px;
+	background: #00008B;
 	width: 14.28571428571429%;
 }
 .textonota
@@ -50,13 +50,13 @@
 	text-align: center;
 	font-size: 2em;
 	font-weight: bold;
-	font-family: Tahoma;
+	font-family: Berlin Sans FB;
 }
 .tocada
 {
-	color: #F00;
-	background: #00F;
-	outline: #093 solid 1px;
+	color: #FFDEAD;
+	background: #FFFFFA;
+	outline: #FFF solid 1px;
 }
 </style>
 
